# AI-Edu

./: .gitignore  README.md  main.py  requirements.txt  学生孪生对接字段说明.md  当前数据库表说明.md  项目启动说明.md
5E/: apis.py  main.py  model.py  service.py  session.py  test.py
AgentModule/: __init__.py  edu_agent.py  qa_agent.py
CoordinatorAgentModule/: coordinator_agent.py
DashboardModule/: __init__.py  dashboard_api.py
DatabaseModule/: __init__.py  migrate_json_to_sqlite.py  sqlite_store.py
DigitalTwinModule/: __init__.py  course_tree.py  data_collector.py  digital_twin_api.py  models.py  score_calculator.py  student_course_profile_service.py  student_twin_service.py  teacher_twin_service.py  trend_tracker.py  twin_profile_store.py
HomeworkModule/: __init__.py  api.py  code_judge.py  exporter.py  models.py  repository.py  service.py
IndustryIntelligenceModule/: __init__.py  analyzer.py  api.py  jobspy_scraper.py  relevance.py  service.py  settings.py
JobSpy/: README.md  pyproject.toml
JobSpy/jobspy/: __init__.py  exception.py  model.py  util.py
JobSpy/jobspy/bayt/: __init__.py
JobSpy/jobspy/bdjobs/: __init__.py  constant.py  util.py
JobSpy/jobspy/glassdoor/: __init__.py  constant.py  util.py
JobSpy/jobspy/google/: __init__.py  util.py
JobSpy/jobspy/indeed/: __init__.py  util.py
JobSpy/jobspy/linkedin/: __init__.py  util.py
JobSpy/jobspy/naukri/: __init__.py  constant.py  util.py
JobSpy/jobspy/ziprecruiter/: __init__.py  constant.py  util.py
LearningPlanModule/: __init__.py  learning_plan.py  plan_agent.py
PathPlannerModule/: __init__.py  (+3 more)
(+166 files in other folders)
